--- a/SystemIO/SystemIO.csproj
+++ b/SystemIO/SystemIO.csproj
@@ -111,6 +111,8 @@
     <Content Include="Views\File\DeleteFile.cshtml" />
     <Content Include="Views\File\WriteToFile.cshtml" />
     <Content Include="Views\File\GetFiles.cshtml" />
+    <Content Include="Views\Dir\VisMapperFile.cshtml" />
+    <Content Include="Views\File\UploadFil.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -121,8 +123,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Filer\300\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Dir\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
